--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,31 @@ footer nav ul {
 	margin: 2em
 }
 
+/* Fin de la base de code */
+
+.filters {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	margin: 50px 0;
+}
+
+.filters button {
+	font-size: 16px;
+	padding: 9px 18px;
+	border-radius: 60px;
+	border: 1px solid #1D6154;
+	background-color: white;
+	color: #1D6154;
+	cursor:pointer;
+}
+
+.filters button:hover {
+	background: #1D6154;
+	color: white;
+}
+
+.filters button.is-active {
+	background: #1D6154;
+	color: white;
+}
