--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -263,7 +263,7 @@ header img {
 	height: 60px;
 	font-size: 14px;
 	padding: 0 16px;
-	border: None;
+	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
@@ -273,7 +273,7 @@ header img {
 	font-size: 14px;
 	background-color:#1D6154;
 	color: white;
-	border: None;
+	border: none;
 	border-radius: 60px;
 	padding: 0px 30px;
 	cursor: pointer;
@@ -290,4 +290,257 @@ header img {
 	color: #3d3d3d;
 	text-decoration: underline;
 	font-size: 14px;
+}
+
+.login-error {
+	margin-top: 16px;
+	font-size: 16px;
+	text-align: center;
+	color:rgb(228, 15, 15);
+}
+
+/* Mode édition */
+
+.edit-banner {
+	height: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	font-size: 16px;
+	background-color: black;
+	color: white;
+}
+
+.portfolio-top {
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
+	gap: 24px;
+	margin: 60px;
+}
+
+.edit-button {
+	display: none;
+	border: none;
+	background: transparent;
+	align-items: center;
+
+	gap: 8px;
+	font-size: 16px;
+	color: black;
+	cursor: pointer;
+
+	font-family: "Work Sans", sans-serif;
+}
+
+/* Modale */
+.modale-overlay {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.modale-overlay.is-open {
+	display: flex;
+}
+
+.modale {
+	background-color: white;
+	width: 630px;
+	padding: 20px 30px;
+	border-radius: 10px;
+
+	max-height: 80%;
+	overflow: auto;
+}
+
+.modale-header {
+	position: relative;
+	height: 30px;
+	margin-bottom: 10px;
+}
+
+.modale-title {
+	text-align: center;
+	font-size: 26px;
+	font-weight: 400;
+	margin: 20px 0;
+}
+
+.modale-gallery {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 10px;
+}
+
+#modale-view-gallery {
+	padding: 0 60px 10px;
+}
+
+.modale-gallery figure {
+	margin: 0;
+	position: relative;
+	height: 100px;
+}
+
+.modale-gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
+
+}
+
+.modale-separator {
+	height: 1px;
+	background-color: #b3b3b3;
+	margin: 30px 0;
+}
+
+.main-button {
+	margin: 0 auto;
+	display: block;
+
+	height: 36px;
+	width: 50%;
+	padding: 0 30px;
+	border-radius: 60px;
+	border: none;
+	
+	background-color: #1D6154;
+	color: white;
+	cursor: pointer;
+	font-family: "Syne";
+}
+
+.modale-form {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.modale-form input, .modale-form select {
+	height: 50px;
+}
+
+.upload-box {
+	background: #e8f1f6;
+	height: 169px;
+	border-radius: 3px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 8px;
+	margin: 10px 0 20px;
+}
+
+.upload-icon {
+  font-size: 76px;
+  color: #b9c5cc;
+}
+
+.thumb-trash {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+
+  width: 17px;
+  height: 17px;
+
+  border: none;
+  border-radius: 2px;
+  background: #000;
+  color: #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 11px;
+}
+
+.modale-back, .modale-close {
+  position: absolute;
+  top: 0;
+  border: none;
+  background: transparent;
+  padding: 0;
+  cursor: pointer;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.modale-back {
+	left: 0;
+}
+
+.modale-close {
+	right: 0;
+}
+
+#modale-view-add-photo {
+  padding: 0 90px 20px; 
+}
+
+.button-upload {
+  height: 36px;
+  padding: 0 20px;
+  border: none;
+  border-radius: 50px;
+  background: #cbd6dc;
+  color: #306685;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.upload-info {
+  font-size: 10px;
+  color: #444;
+  margin: 0;
+}
+
+.modale-form label {
+	font-size: 14px;
+	font-weight: 500;
+	margin: 0 0 6px;
+}
+
+.modale-form input, .modale-form select {
+  width: 100%;
+  height: 50px;
+  border: none;
+  outline: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  padding: 0 12px;
+  font-size: 14px;
+  background: #fff;
+}
+
+.modale-form .main-button {
+  width: 237px;
+  height: 36px;
+  margin: 25px auto 0;
+  border-radius: 60px;
+  font-family: "Syne", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.modale-form .main-button:disabled {
+  background: #a7a7a7;
+  cursor: not-allowed;
+}
+
+[hidden] {
+	display: none;
 }
